# zjs_project

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_server.sh
.github/workflows/: ci.yml  daily_fetch.yml
docs/: DATA_MODELS.md  SCOPE_PROGRESS.md  e2e-best-practices.md  requirements-cpe-matching.md  requirements-nvd-api.md  requirements.md
docs/api-specs/: vulnerability-list-api.md
documentation/reports/: cpe-matching-implementation-report-2026-01-28.html  phase1-requirements-completion-report-2026-01-07.html  phase1-requirements-progress-report-2026-01-05.html  (+16 more)
frontend/: lighthouse.config.js  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
mockups/: Assets.html  MatchingResults.html  VulnerabilityList.html
scripts/: README.md  TESTING.md  cleanup_test_data.py  fetch_vulnerabilities.py  setup_local_db.py
src/: config.py  database.py  main.py
test_uploads/: Dockerfile  composer.json  package.json
tests/: __init__.py
脆弱性管理システム/: aws_asset_collection_guide.html  ci_guide.html  cpe_guide.html  cve_nvd_guide.html  dashboard_ui_guide.html  db_design_guide.html  development_assignment_overview.html  docker_cicd_guide.html  document_automation_guide.html  github_pr_guide.html  index.html  integration_test_guide.html  issue_guide.html  matching_engine_guide.html  notification_integration_guide.html  notification_system_guide.html  priority_calculation_guide.html  report_generation_guide.html
(+73 files in other folders)
